# coding-archive

./: README.md
BAYCBOT/: api_clients.py  app.py  bot.py  main.py  models.py  pyproject.toml  queue_manager.py  replit.nix  replit_zip_error_log.txt
BAYCBOT/static/css/: custom.css
BAYCBOT/static/js/: dashboard.js
BAYCBOT/templates/: base.html  dashboard.html
RTC/: test.html  test1.html
Resume-Agent-Crew/: Pasted-from-flask-import-Flask-render-template-request-jsonify-send-file-from-crew-import-ThrallaBoys-i-1733333008857.txt  Pasted-from-flask-import-Flask-render-template-request-jsonify-send-file-from-thralla-boys-crew-import--1733399191733.txt  README.md  pyproject.toml  replit_zip_error_log.txt  t  x.py
Resume-Agent-Crew/src/thralla_boys/: crew.py  job_analysis.txt  main.py  optimized_resume.md  original_resume_analysis.txt  report.md
Resume-Agent-Crew/src/thralla_boys/config/: agents.yaml  tasks.yaml
nikhil-clone-chatbot/: admin_config.json  admin_panel.py  analytics.py  api_docs.html  app.py  content_filter.py  conversation_history.py  database.py  db_services.py  main.py  models.py  openai_service.py  pyproject.toml  rag_service.py  replit.md  system_prompt.txt  webhook_service.py
nikhil-clone-chatbot/attached_assets/: Pasted--Create-a-Flask-backend-for-an-LLM-powered-chatbot-that-will-serve-my-personal-website-s-chat-inter-1751964776167_1751964776168.txt
nikhil-clone-chatbot/blog_posts/: .gitkeep
nikhil-clone-chatbot/chat_logs/: .gitkeep  analytics.json  chat_log_2025-07-08.json  errors.json  filtered_requests.json
nikhil-clone-chatbot/conversation_history/: fcb7234b-0d18-4ca5-b8ff-a458aa9d89ab.json  test-conv-001.json
nikhil-clone-chatbot/data/: .gitkeep  chroma.sqlite3
nikhil-clone-chatbot/temp/: chat.md
(+25 files in other folders)
