[project]
name = "repl-nix-contextualaiagent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "openai>=1.55.3",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.0",
    "replicate>=1.0.4",
    "tweepy>=4.14.0",
    "rq>=2.0.0",
    "requests>=2.32.3",
    "python-dotenv",
    "requests-oauthlib>=1.3.1",
    "sqlalchemy",
]
