[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.4.14",
    "email-validator>=2.2.0",
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "frontmatter>=3.0.8",
    "gunicorn>=23.0.0",
    "numpy>=2.3.1",
    "openai>=1.93.1",
    "psycopg2-binary>=2.9.10",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.4",
    "werkzeug>=3.1.3",
    "flask-limiter>=3.12",
    "sqlalchemy>=2.0.41",
    "pyyaml>=5.1",
]
